for working at home

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -2,6 +2,8 @@
 <html lang="en-US">
 <head>
   <title> About Katie </title>
+  <link rel="stylesheet" type="text/css" href="style.css"
+</head>
 <body>
 
 <h1> About Katie </h1>
