with core four page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--Heading of the website and linking the css file for the style -->
 <html lang="en-US">
 <head>
   <title> About Katie </title>
@@ -6,10 +7,12 @@
 </head>
 <body>
 
+<!-- First paragraph, birography -->
 <h1> About Katie </h1>
 <p title="SIP Summary"> This site is about me and a look at the work I did in the Summer Immersion Program at GWC </p>
 <hr>
 
+<!--Second paragraph, image -->
 <h2 title="Biography"> Biography </h2>
 <p>
   <img src="goldenpuppies.jpeg" alt="Golden Retriever Puppies" style="width:200px;height:200px"</img>
@@ -17,12 +20,18 @@
 </p>
 <hr>
 
+<!-- Third paragraph, likes and dislikes -->
 <h3 title="Likes and Dislikes"> Likes and Dislikes </h3>
 <p>
 I love my dog, anything that occurs in a body of water (swimming, water polo, body surfing etc.)
 <br/> living in the PNW, hiking, and watching playoff games. I strongly dislike tomatoes,
 <br/> mushrooms, avacados, and whipped cream.
-
 </p>
+<hr>
+
+<!-- link to core four -->
+<a href = "CoreFour.html">> Core Four </a>
+
+<!-- ending code -->
 </body>
 </html>
