--- a/CoreFour.html
+++ b/CoreFour.html
@@ -11,15 +11,19 @@
 <!-- Loops -->
 <h2> Loops </h2>
 <h3> Technical Definition </h3>
-<p> For loops 
+<p> For loops
 </p>
 
 <!-- Variables -->
 <h2> Variables </h2>
-
+<h3> Technical Definition </h3>
+<p>
+</p>
 <!-- Conditionals -->
 <h2> Conditionals </h2>
-
+<h3> Technical Definition </h3>
+<p>
+</p>
 <!-- Functions -->
 <h2> Functions </h2>
 
