new and improved

--- a/CoreFour.html
+++ b/CoreFour.html
@@ -11,21 +11,31 @@
 <!-- Loops -->
 <h2> Loops </h2>
 <h3> Technical Definition </h3>
-<p> For loops
+<p> A for loop allows code written to be cycled through for a specified amount of times,
+  and to change every time it is cycled through.
 </p>
 
 <!-- Variables -->
 <h2> Variables </h2>
 <h3> Technical Definition </h3>
-<p>
+<p> Variables are like variables in math. They store values that can be plugged in to different areas of code.
+  Variables can be strings or integers, and they can be changed later on in the code.
 </p>
+
 <!-- Conditionals -->
 <h2> Conditionals </h2>
 <h3> Technical Definition </h3>
-<p>
+<p> Conditionals are statements that give the code options to run on. They are like a fork in the road.
+  A common example of a conditional statement is an if/else statement. This gives the computer two options of
+  code to run, and it chooses which code to run based on a boolean value.
 </p>
+
 <!-- Functions -->
 <h2> Functions </h2>
-
+<h3> Technical Definition </h3>
+<p> Functions are like equations in math. They are pieces of code written with parameters. In later code, variables
+are used to replace the parameters and then the code is run with the variables inputed in later code. Functions
+return a value, and can be called multiple times in a file. Functions are used as to not have to copy and paste code over
+and over again.  </p>
 </body>
 </html>
